changes in footer

--- a/about/index.html
+++ b/about/index.html
@@ -105,7 +105,7 @@
                     </li>
 
                     <li><a class="nav-link scrollto" href="../reviews/">Reviews</a></li>
-                    <li><a class="nav-link scrollto" href="about/#team">Team</a></li>
+                    <li><a class="nav-link scrollto" href="../blog">Blog</a></li>
                     <li><a class="nav-link scrollto" href="../contact/">Contact Us</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -336,12 +336,13 @@
     <!-- ======= Footer ======= -->
     <footer id="footer">
         <div class="footer-top">
-            <div class="container">
+            <div class="container noselect">
                 <div class="row">
 
                     <div class="col-lg-3 col-md-6">
                         <div class="footer-info">
-                            <img src="assets\img\favicon.webp" alt="Favicon Image" width="100" height="100">
+                            <img src="assets\img\favicon.webp" alt="Favicon Image" width="100" height="100"
+                                loading="lazy">
                             <p style="padding-top: 10px; text-transform: uppercase; font-weight: bolder;">SBSSdigital
                                 LLP</p>
 
@@ -354,19 +355,17 @@
                         </div>
                     </div>
 
-
                     <div class="col-lg-2 col-md-6 footer-links">
                         <h4>Useful Links</h4>
                         <ul>
-                            <li><i class="bx bx-chevron-right"></i> <a href="http://127.0.0.1:5500/index.html#about">Buy
+                            <li><i class="bx bx-chevron-right"></i> <a href="https://sbssdigital.in/">Buy
                                     Domain & Web Hoasting</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="http://127.0.0.1:5500/index.html#features">GPS Enabled Trackers</a></li>
+                            <li id="myBtn"><i class="bx bx-chevron-right"></i>Privacy Policies</li>
                             <li><i class="bx bx-chevron-right"></i> <a
                                     href="http://127.0.0.1:5500/index.html#services">SCM Solutions</a>
                             </li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">About SBSSdigital</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="#">Courier With SBSS</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="/about">About SBSSdigital</a></li>
+                            <li><i class="bx bx-chevron-right"></i> <a href="#">Career With SBSS</a></li>
                         </ul>
                     </div>
 
@@ -387,20 +386,20 @@
                     <div class="col-lg-4 col-md-6 footer-newsletter">
                         <h4>Our Newsletter</h4>
                         <p>Please Subscribe for Latest Updates and New Offers</p>
-                        <form action="../forms/newsletter.php" method="post">
+                        <form action="forms/newsletter.php" method="post">
                             <input type="email" name="email">aaa<input type="submit" value="Subscribe">
                         </form>
                         <br>
                         <div class="social-links mt-3">
-                            <a href="https://www.twitter.com/sbssdigital" class="twitter"><i
+                            <a href="https://www.twitter.com/SBSSdigital" class="twitter"><i
                                     class="bx bxl-twitter"></i></a>
-                            <a href="https://www.facebook.com/sbssdigital" class="facebook"><i
+                            <a href="https://www.facebook.com/SBSSdigital" class="facebook"><i
                                     class="bx bxl-facebook"></i></a>
-                            <a href="https://www.instagram.com/sbssdigital" class="instagram"><i
+                            <a href="https://www.instagram.com/SBSSdigital" class="instagram"><i
                                     class="bx bxl-instagram"></i></a>
                             <a href="https://www.youtube.com/channel/UCvIeQ72QRzqlM4fLMfF6Akw" class="google-plus"><i
                                     class="bx bxl-youtube"></i></a>
-                            <a href="https://www.linkedin.com/company/sbssdigital" class="linkedin"><i
+                            <a href="https://www.linkedin.com/company/SBSSdigital" class="linkedin"><i
                                     class="bx bxl-linkedin"></i></a>
                         </div>
                     </div>
@@ -424,7 +423,7 @@
                 <!-- You can delete the links only if you purchased the pro version. -->
                 <!-- Licensing information: https://bootstrapmade.com/license/ -->
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/gp-free-multipurpose-html-bootstrap-template/ -->
-                Designed by <a href="https://sbssdigital.com/">SBSSdigital</a>
+                Designed by <a href="https://SBSSdigital.com/">SBSSdigital</a>
             </div>
         </div>
     </footer><!-- End Footer -->
