--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     </li>
 
                     <li><a class="nav-link scrollto" href="reviews/">Reviews</a></li>
-                    <li><a class="nav-link scrollto" href="about/#team">Team</a></li>
+                    <li><a class="nav-link scrollto" href="blog/">Blog</a></li>
                     <li><a class="nav-link scrollto" href="contact/">Contact Us</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
