--- a/services/strategy_consulting/index.html
+++ b/services/strategy_consulting/index.html
@@ -103,7 +103,7 @@
                     </li>
 
                     <li><a class="nav-link scrollto" href="../../reviews/">Reviews</a></li>
-                    <li><a class="nav-link scrollto" href="../../about/#team">Team</a></li>
+                    <li><a class="nav-link scrollto" href="../../blog">Blog</a></li>
                     <li><a class="nav-link scrollto" href="../../contact/">Contact Us</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -666,8 +666,7 @@
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a href="https://sbssdigital.in/">Buy
                                     Domain & Web Hoasting</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="http://127.0.0.1:5500/index.html#features">Privacy Policies</a></li>
+                            <li id="myBtn"><i class="bx bx-chevron-right"></i>Privacy Policies</li>
                             <li><i class="bx bx-chevron-right"></i> <a
                                     href="http://127.0.0.1:5500/index.html#services">SCM Solutions</a>
                             </li>
