addition of blog in header of bblog pages

--- a/blog-details/index.html
+++ b/blog-details/index.html
@@ -54,7 +54,7 @@
                     </li>
 
                     <li><a class="nav-link scrollto" href="../reviews/">Reviews</a></li>
-                    <li><a class="nav-link scrollto" href="../about/#team">Team</a></li>
+                    <li><a class="nav-link scrollto" href="../blog">Blog</a></li>
                     <li><a class="nav-link scrollto" href="../contact/">Contact Us</a></li>
                 </ul>
                 <i class="bi bi-list mobile-nav-toggle"></i>
@@ -443,7 +443,7 @@
                   <div class="col-lg-4 col-md-6 footer-newsletter">
                       <h4>Our Newsletter</h4>
                       <p>Please Subscribe for Latest Updates and New Offers</p>
-                      <form action="forms/newsletter.php" method="post">
+                      <form action="../forms/newsletter.php" method="post">
                           <input type="email" name="email">aaa<input type="submit" value="Subscribe">
                       </form>
                       <br>
